# simple-survey

./: .gitignore  LICENSE  README.md  app.py  docker-compose.yml  models.py  participants.json  pyproject.toml  requirements.txt  survey-sample.json  survey.json
simple_survey/: __init__.py  app.py  models.py
templates/: survey.html  thank_you.html
